# WHC-IDE

./: CMakeLists.txt  IDE.pro  PROBLEMS.txt  README.md  TODO.txt  forDevelopers.txt
Global_settings/: comment_format.txt  langs_licence.txt  out.txt
Global_settings/lang/: cpp.lang  opencl_host.lang
include/: CMakeLists.txt  iwf.h
lib/: CMakeLists.txt  iwf.cpp
samples/Execute/: Execute.whc
samples/Execute/data/input/: 2.txt  3.txt
samples/Execute/src/Task1/: CMakeLists.txt  kernel.cl  main.cpp  main.h
samples/Execute/src/Task1/Execute/temp_0/: out_Task1_0_1
src/: CMakeLists.txt  CMakeLists.txt~  findtool.cpp  findtool.h  highlighter.cpp  highlighter.h  ide.cpp  ide.h  ide.h.autosave  main.cpp  mdidiagram.cpp  mdidiagram.h  mdisubwindow.cpp  mdisubwindow.h  mditexteditor.cpp  mditexteditor.h  monitor.cpp  monitor.h  newproject.cpp  newproject.h  runtests.h  staticmethods.cpp  staticmethods.h  stats.cpp  stats.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/cluster/: addcluster.cpp  addcluster.h  clusterconnect.cpp  clusterconnect.h  clustercontrol.cpp  clustercontrol.h
src/diagram/: arrow.cpp  arrow.h  connector.cpp  connector.h  containers.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramwindow.cpp  diagramwindow.h
src/diagram/old/: diagramconnection.cpp  diagramconnection.h  diagramdata.cpp  diagramdata.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramtask.cpp  diagramtask.h
src/editor/: completemodel.cpp  completemodel.h  completionmodel.cpp  completionmodel.h
src/forms/: addFile.ui  addcluster.ui  clusterconnect.ui  clustercontrol.ui  credits.ui  ide.ui  ide.ui.old  intro.ui  newTask.ui  projectdialog.ui  settingsDialog.ui  stats.ui  tabproject.ui
src/libssh/: libssh_authentication.c  libssh_connect.c  libssh_scp.c  libssh_send.c
src/model/: projecttreeitem.cpp  projecttreeitem.h  projecttreemodel.cpp  projecttreemodel.h
src/projBuild/: commandline.cpp  commandline.h  projectbuild.cpp  projectbuild.h
src/projBuild/test/: testCommandLine.cpp  testCommandLine.h
src/projManagement/: adddata.cpp  adddata.h  addfiles.cpp  addfiles.h  addnewfile.cpp  addnewfile.h  addtask.cpp  addtask.h  datagroup.cpp  datagroup.h  overwritefile.cpp  overwritefile.h  staticmethods.cpp  staticmethods.h
src/projectExec/: cl.h  devicequery.cpp  devicequery.h  execute.cpp  execute.h  oneprocess.cpp  oneprocess.h  sorttask.cpp  sorttask.h
src/resources/: highlighter.qrc  icons.qrc  mainCppTemplate.qrc  mainTemplate.cpp
src/resources/lang/format_scheme/: c.lang  opencl.lang
src/settings/: clustersettings.cpp  clustersettings.h  editorSettings.cpp  editorSettings.h  editorSettingsVar.cpp  editorSettingsVar.h  generalsettings.cpp  generalsettings.h  projectsettings.h
src/tests/: testIde.h  testdiagram.cpp  testdiagram.h  testdiagramscene.cpp  testdiagramscene.h  testide.cpp
src/unused/: EditorSettings.cpp  EditorSettings.h  addcluster.ui  clusterconnect.ui  ide.cpp.unused  ide.h.unused  libssh_core.h  libssh_scp.cpp  mdidiagramview.cpp  mdidiagramview.h  projectitem.cpp.unused  projectitem.h.unused  testssh.cpp  testssh.h
templates/task/: bin  main.cpp  whc.cpp  whc.h
templates/template0/: template0.whc
templates/template0/Cod/Task_1/: Task_1.cpp  kernels.cl  libCL.hpp
templates/template1/: Lena256.pgm  Lena64.pgm  template1.whc
templates/template1/Cod/Task_1/: Task_1.cpp  kernels.cl  lib.cpp  lib.hpp
templates/template2/: Lena512.pgm  template2.whc
templates/template2/Cod/Task_1/: Task_1.cpp  kernels.cl
templates/template2/Cod/Task_2/: Task_2.cpp  libCL.cpp
templates/template3/: template4.whc
